--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="The Shoe Site"
+    <meta name="description" content="A simple site for shoe info">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Running Shoes!</title>
 </head>
 <body>
     
+
+
+
+
+
+    <footer>
+        <p>This site is a project in progress!</p>
+        <p><small>&copy; 2021 The Run Project - All rights reserved</small></p>
+    </footer>
 </body>
 </html>
