added rel links to css and js script, while putting those two files on their respective folders.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="The Shoe Site"
-    <meta name="description" content="A simple site for shoe info">
+    <meta name="description" content="A simple site for shoe info"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Running Shoes!</title>
+    <link rel="stylesheet" href="css/styles.css"/>
+
 </head>
 <body>
     
@@ -20,4 +22,6 @@
         <p><small>&copy; 2021 The Run Project - All rights reserved</small></p>
     </footer>
 </body>
+
+<script src="js/script.js"></script>
 </html>
