Modified the index.html as the Boba tea store. Also added a new h1 placement.

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="author" content="The Shoe Site"
-    <meta name="description" content="A simple site for shoe info"/>
+    <meta name="author" content="The Bubble Boba!">
+    <meta name="description" content="This is a site for a boba tea shop!"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Running Shoes!</title>
+    <title>Bubble Boba</title>
     <link rel="stylesheet" href="css/styles.css"/>
 
 </head>
 <body>
     
-
+    <h1>Refreshing Boba Tea Selections!</h1>
 
 
 
 
     <footer>
         <p>This site is a project in progress!</p>
-        <p><small>&copy; 2021 The Run Project - All rights reserved</small></p>
+        <p><small>&copy; 2021 The Boba Project - All rights reserved</small></p>
     </footer>
 </body>
 
