added several images of boba tea and set one image as temp hero image.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 
 </head>
 <body>
-    
-    <h1>Refreshing Boba Tea Selections!</h1>
+    <header> 
+        <section id="hero" class="hero">
+        <div class="background-image" style="background-image: url(images/boba-tea1.jpg);"></div>
+        <h3>Refreshing Boba Tea Selections!</h3>    
+        </section> 
+    </header>
+    <h1>Your one place to get your Boba Tea cravings!</h1>
 
 
 
