--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </section> 
     </header>
     <h1>Your one place to get your Boba Tea cravings!</h1>
+    <img src="/images/bubble-tea-recipe-tapioca.webp" alt="">
 
 
 
