--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="The Bubble Boba!">
-    <meta name="description" content="This is a site for a boba tea shop!"/>
+    <meta name="description" content="This is a site for a boba tea shop!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Boba</title>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/styles.css" />
 
 </head>
-<body>
-    <header> 
-        <section id="hero" class="hero">
-        <div class="background-image" style="background-image: url(images/boba-tea1.jpg);"></div>
-        <h3>Refreshing Boba Tea Selections!</h3>    
-        </section> 
+
+<body id="top">
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#top">Top</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <h1>Your one place to get your Boba Tea cravings!</h1>
-    <img src="/images/bubble-tea-recipe-tapioca.webp" alt="">
 
 
+    <section id="hero" class="hero">
+        <div class="background-image" style="background-image: url(images/boba-tea1.jpg);"></div>
+        <h3>Refreshing Boba Tea Selections!</h3>
+    </section>
+
+    <section id="about"></section>
+    <h2>So what is Boba Tea?</h2>
+    <img src="/images/bubble-tea-recipe-tapioca.webp" alt="Two glasses of brown sugar bubble tea.">
+
+    <section id="menu"></section>
+    <section id="contact"></section>
 
 
     <footer>
@@ -30,4 +45,5 @@
 </body>
 
 <script src="js/script.js"></script>
+
 </html>
