--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
 
     <section id="hero" class="hero">
         <div class="background-image" style="background-image: url(images/boba-tea1.jpg);"></div>
-        <h3>Refreshing Boba Tea Selections!</h3>
+        <h1>Bubble Boba</h1>
+        <h3>Welcome to our shop!</h3>
     </section>
 
     <section id="about"></section>
-    <h2>So what is Boba Tea?</h2>
     <img src="/images/bubble-tea-recipe-tapioca.webp" alt="Two glasses of brown sugar bubble tea.">
+    <h3>So what is Boba Tea?</h3>
+    <p>Boba tea is a refreshing beverage that contains tapioca pearls mixed in with a tea of your choice!</p>
+    <p>Boba tea or bubble tea does come in with many combinations of flavors!</p>
 
     <section id="menu"></section>
     <section id="contact"></section>
