modified the about image with added title.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
 
     <section id="about"></section>
-    <img src="/images/bubble-tea-recipe-tapioca.webp" alt="Two glasses of brown sugar bubble tea.">
+    <img src="/images/bubble-tea-recipe-tapioca.webp" alt="Two glasses of brown sugar bubble tea." title="two glasses of brown sugar bubble tea">
     <h3>So what is Boba Tea?</h3>
     <p>Boba tea is a refreshing beverage that contains tapioca pearls mixed in with a tea of your choice!</p>
     <p>Boba tea or bubble tea does come in with many combinations of flavors!</p>
