--- a/index.html
+++ b/index.html
@@ -27,24 +27,53 @@
 
     <section id="hero" class="hero">
         <div class="background-image" style="background-image: url(images/boba-tea1.jpg);"></div>
-        <h1>Bubble Boba</h1>
-        <h3>Welcome to our shop!</h3>
+        <div class="container">
+            <div class="row">
+                <h1>Bubble Boba</h1>
+                <h3>Welcome to our shop!</h3>
+            </div>
+        </div>
     </section>
 
     <section id="about"></section>
-    <img src="/images/bubble-tea-recipe-tapioca.webp" alt="Two glasses of brown sugar bubble tea." title="two glasses of brown sugar bubble tea">
-    <h3>So what is Boba Tea?</h3>
-    <p>Boba tea is a refreshing beverage that contains tapioca pearls mixed in with a tea of your choice!</p>
-    <p>Boba tea or bubble tea does come in with many combinations of flavors!</p>
+    <img src="/images/bubble-tea-recipe-tapioca.webp" alt="Two glasses of brown sugar bubble tea."
+        title="two glasses of brown sugar bubble tea">
 
-    <section id="menu"></section>
-    <section id="contact"></section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h3>So what is Boba Tea?</h3>
+                    <p>Boba tea is a refreshing beverage that contains tapioca pearls mixed in with a tea of your
+                        choice!</p>
+                    <p>Boba tea or bubble tea does come in with many combinations of flavors!</p>
+
+                </div>
+            </div>
+        </div>
 
 
-    <footer>
-        <p>This site is a project in progress!</p>
-        <p><small>&copy; 2021 The Boba Project - All rights reserved</small></p>
-    </footer>
+
+        <section id="about-us">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h2>About Us!</h2>
+                        <p>Our passion is to bring happiness to people with the power of bubble tea!</p>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+        <section id="menu"></section>
+        <section id="contact"></section>
+
+
+        <footer>
+            <p>This site is a project in progress!</p>
+            <p><small>&copy; 2021 The Boba Project - All rights reserved</small></p>
+        </footer>
 </body>
 
 <script src="js/script.js"></script>
