--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 
 
     <section id="hero" class="hero">
-        <div class="background-image" style="background-image: url(images/boba-tea1.jpg);"></div>
+        
         <div class="container">
-            <div class="row">
+            <div class="column">
                 <h1>Bubble Boba</h1>
                 <h3>Welcome to our shop!</h3>
+                <div class="main image"> <img src="/images/boba-tea1.jpg" alt=" a set of boba tea"></div>
             </div>
         </div>
     </section>
