--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
 
     <section id="hero" class="hero">
-        
+
         <div class="container">
             <div class="column">
                 <h1>Bubble Boba</h1>
                 <h3>Welcome to our shop!</h3>
-                <div class="main image"> <img src="/images/boba-tea1.jpg" alt=" a set of boba tea"></div>
+                <div class="img-responsive"> <img src="/images/boba-tea1.jpg" alt=" a set of boba tea"></div>
             </div>
         </div>
     </section>
@@ -67,6 +67,18 @@
 
 
         </section>
+        <section id="gallery" class="gallery">
+
+            <h2>Gallery!</h2>
+            <p>Here is a gallery of the wonderful boba tea combos you might like!</p>
+            <ul class="grid">
+                <li class="large" style="background-image: url(images/green-bubble-tea-fruit-e1562873692463.png);"></li>
+                <li class="small" style="background-image: url(images/bubble-tea-fruits.webp);"></li>
+                <li class="small" style="background-image: url(images/23.TaiwanOolongMilkTea-1.jpg);"></li>
+                <li class="large" style="background-image: url(images/bubble-tea-recipe-tapioca.webp);"></li>
+            </ul>
+        </section>
+
         <section id="menu"></section>
         <section id="contact"></section>
 
