tried to add css grid again, currently looks funky for now. may try to revert it or fix it.

--- a/index.html
+++ b/index.html
@@ -54,39 +54,48 @@
         </div>
 
 
-
-        <section id="about-us">
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h2>About Us!</h2>
-                        <p>Our passion is to bring happiness to people with the power of bubble tea!</p>
+        <aside id="main">
+            <section id="about-us">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <h2>About Us!</h2>
+                            <p>Our passion is to bring happiness to people with the power of bubble tea!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
+        </aside>
 
 
-        </section>
-        <section id="gallery" class="gallery">
 
-            <h2>Gallery!</h2>
-            <p>Here is a gallery of the wonderful boba tea combos you might like!</p>
-            <ul class="grid">
-                <li class="large" style="background-image: url(images/green-bubble-tea-fruit-e1562873692463.png);"></li>
-                <li class="small" style="background-image: url(images/bubble-tea-fruits.webp);"></li>
-                <li class="small" style="background-image: url(images/23.TaiwanOolongMilkTea-1.jpg);"></li>
-                <li class="large" style="background-image: url(images/bubble-tea-recipe-tapioca.webp);"></li>
-            </ul>
-        </section>
-
-        <section id="menu"></section>
-        <section id="contact"></section>
+    </section>
 
 
-        <footer>
-            <p>This site is a project in progress!</p>
-            <p><small>&copy; 2021 The Boba Project - All rights reserved</small></p>
-        </footer>
+    <section id="gallery" class="gallery">
+
+        <h2>Gallery!</h2>
+        <p>Here is a gallery of the wonderful boba tea combos you might like!</p>
+        <!--<img id="boba1" class="img-responsive" src="/images/23.TaiwanOolongMilkTea-1.jpg" alt="a serving of Oolong milk tea">
+        <img id="boba2" src="/images/bubble-tea-fruits.webp" alt="a serving of boba tea with assorted fruits">
+        <img id="boba3" src="/images/bubble-tea-recipe-tapioca.webp" alt="two cups of boba tea">
+        <img id="boba4" src="/images/green-bubble-tea-fruit-e1562873692463.png" alt="green tea boba">
+        -->
+         <ul class="grid">
+               <li class="large" id="boba1" style="background-image: url(images/green-bubble-tea-fruit-e1562873692463.png);"></li>
+            <li class="small" id="boba2" style="background-image: url(images/bubble-tea-fruits.webp);"></li>
+            <li class="small" id="boba3" style="background-image: url(images/23.TaiwanOolongMilkTea-1.jpg);"></li>
+            <li class="large" id="boba4" style="background-image: url(images/bubble-tea-recipe-tapioca.webp);"></li>
+        </ul> 
+    </section>
+
+    <section id="menu"></section>
+    <section id="contact"></section>
+
+
+    <footer>
+        <p>This site is a project in progress!</p>
+        <p><small>&copy; 2021 The Boba Project - All rights reserved</small></p>
+    </footer>
 </body>
 
 <script src="js/script.js"></script>
