adjusted the page to be center aligned, for now it shaping up a bit. I need to figure out how to resize the images.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul>
                 <li><a href="#top">Top</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#menu">Menu</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -27,12 +28,11 @@
 
     <section id="hero" class="hero">
 
-        <div class="container">
-            <div class="column">
+        <div class="hero-image">
                 <h1>Bubble Boba</h1>
                 <h3>Welcome to our shop!</h3>
                 <div class="img-responsive"> <img src="/images/boba-tea1.jpg" alt=" a set of boba tea"></div>
-            </div>
+            
         </div>
     </section>
 
@@ -53,18 +53,18 @@
             </div>
         </div>
 
+    </section>
 
-        <aside id="main">
-            <section id="about-us">
-                <div class="container">
-                    <div class="row">
-                        <div class="col">
-                            <h2>About Us!</h2>
-                            <p>Our passion is to bring happiness to people with the power of bubble tea!</p>
-                        </div>
-                    </div>
+    <section id="about-us">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>About Us!</h2>
+                    <p>Our passion is to bring happiness to people with the power of bubble tea!</p>
                 </div>
-        </aside>
+            </div>
+        </div>
+
 
 
 
@@ -80,16 +80,27 @@
         <img id="boba3" src="/images/bubble-tea-recipe-tapioca.webp" alt="two cups of boba tea">
         <img id="boba4" src="/images/green-bubble-tea-fruit-e1562873692463.png" alt="green tea boba">
         -->
-         <ul class="grid">
-               <li class="large" id="boba1" style="background-image: url(images/green-bubble-tea-fruit-e1562873692463.png);"></li>
+        <ul class="grid">
+            <li class="large" id="boba1"
+                style="background-image: url(images/green-bubble-tea-fruit-e1562873692463.png);"></li>
             <li class="small" id="boba2" style="background-image: url(images/bubble-tea-fruits.webp);"></li>
             <li class="small" id="boba3" style="background-image: url(images/23.TaiwanOolongMilkTea-1.jpg);"></li>
             <li class="large" id="boba4" style="background-image: url(images/bubble-tea-recipe-tapioca.webp);"></li>
-        </ul> 
+        </ul>
     </section>
 
-    <section id="menu"></section>
-    <section id="contact"></section>
+    <section id="menu"> 
+        <h2>Menu</h2>
+        <p>Here is our current selections for boba beverages!</p>
+    </section>
+
+
+
+    <section id="contact">
+        <h2>Contact Us!</h2>
+        <p> Connect to our social networks to get new Boba News!</p>
+        <p>You can also call us at 123-456-7890!</p>
+    </section>
 
 
     <footer>
