--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Boba</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
 </head>
 
@@ -82,10 +84,10 @@
         -->
         <ul class="grid">
             <li class="large" id="boba1"
-                style="background-image: url(images/green-bubble-tea-fruit-e1562873692463.png);"></li>
-            <li class="small" id="boba2" style="background-image: url(images/bubble-tea-fruits.webp);"></li>
-            <li class="small" id="boba3" style="background-image: url(images/23.TaiwanOolongMilkTea-1.jpg);"></li>
-            <li class="large" id="boba4" style="background-image: url(images/bubble-tea-recipe-tapioca.webp);"></li>
+                style="background-image: url(images/green-bubble-tea-fruit-e1562873692463.png); height: 250px; background-size: cover;"></li>
+            <li class="small" id="boba2" style="background-image: url(images/bubble-tea-fruits.webp); height: 250px; background-size: cover;"></li>
+            <li class="small" id="boba3" style="background-image: url(images/23.TaiwanOolongMilkTea-1.jpg); height: 250px; background-size: cover;"></li>
+            <li class="large" id="boba4" style="background-image: url(images/bubble-tea-recipe-tapioca.webp); height: 250px; background-size: cover;"></li>
         </ul>
     </section>
 
