added one new image to gallery, added new footer code with social media icons/links and changed footer color.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://kit.fontawesome.com/15df8596d6.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -33,7 +34,7 @@
         <div class="hero-image">
                 <h1>Bubble Boba</h1>
                 <h3>Welcome to our shop!</h3>
-                <div class="img-responsive"> <img src="/images/boba-tea1.jpg" alt=" a set of boba tea"></div>
+                <div class="hero"> <img src="/images/boba-tea1.jpg" alt=" a set of boba tea"></div>
             
         </div>
     </section>
@@ -63,6 +64,7 @@
                 <div class="col">
                     <h2>About Us!</h2>
                     <p>Our passion is to bring happiness to people with the power of bubble tea!</p>
+                    <p> </p>
                 </div>
             </div>
         </div>
@@ -77,11 +79,12 @@
 
         <h2>Gallery!</h2>
         <p>Here is a gallery of the wonderful boba tea combos you might like!</p>
-        <!--<img id="boba1" class="img-responsive" src="/images/23.TaiwanOolongMilkTea-1.jpg" alt="a serving of Oolong milk tea">
-        <img id="boba2" src="/images/bubble-tea-fruits.webp" alt="a serving of boba tea with assorted fruits">
-        <img id="boba3" src="/images/bubble-tea-recipe-tapioca.webp" alt="two cups of boba tea">
-        <img id="boba4" src="/images/green-bubble-tea-fruit-e1562873692463.png" alt="green tea boba">
-        -->
+        <img id="boba1" class="img-responsive" src="/images/23.TaiwanOolongMilkTea-1.jpg" alt="a serving of Oolong milk tea">
+        <img id="boba2" class="img-responsive" src="/images/bubble-tea-fruits.webp" alt="a serving of boba tea with assorted fruits">
+        <img id="boba3" class="img-responsive"  src="/images/types-of-bubble-tea-766451-hero-01-a6dca4dd096a4d8abdde1a754766f851.webp" alt=" 4 assorted cups of boba tea">
+        <img id="boba4" class="img-responsive" src="/images/green-bubble-tea-fruit-e1562873692463.png" alt="green tea boba">
+        <img id="boba5" class="img-responsive" src="/images/tiger_milk_tea.jpg" alt="two glasses of tiger boba milk tea">
+        <!--
         <ul class="grid">
             <li class="large" id="boba1"
                 style="background-image: url(images/green-bubble-tea-fruit-e1562873692463.png); height: 250px; background-size: cover;"></li>
@@ -89,6 +92,7 @@
             <li class="small" id="boba3" style="background-image: url(images/23.TaiwanOolongMilkTea-1.jpg); height: 250px; background-size: cover;"></li>
             <li class="large" id="boba4" style="background-image: url(images/bubble-tea-recipe-tapioca.webp); height: 250px; background-size: cover;"></li>
         </ul>
+        -->
     </section>
 
     <section id="menu"> 
@@ -98,14 +102,23 @@
 
 
 
-    <section id="contact">
-        <h2>Contact Us!</h2>
-        <p> Connect to our social networks to get new Boba News!</p>
-        <p>You can also call us at 123-456-7890!</p>
-    </section>
+    
 
 
     <footer>
+
+        <section id="contact">
+            <h2>Contact Us!</h2>
+            <p> Connect to our social networks to get new Boba News!</p>
+            <ul>
+                <li><a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-snapchat-square"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-pinterest-square"></i></a></li>
+            </ul>
+            <p>You can also call us at 123-456-7890!</p>
+        </section>
+
         <p>This site is a project in progress!</p>
         <p><small>&copy; 2021 The Boba Project - All rights reserved</small></p>
     </footer>
