--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Boba</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://kit.fontawesome.com/15df8596d6.js" crossorigin="anonymous"></script>
 
@@ -18,6 +18,7 @@
 <body id="top">
     <header>
         <nav>
+            <h1><a href="http://www.pluralsight.com" target="_blank">Bubble Boba</a></h1>
             <ul>
                 <li><a href="#top">Top</a></li>
                 <li><a href="#about">About</a></li>
@@ -32,10 +33,10 @@
     <section id="hero" class="hero">
 
         <div class="hero-image">
-                <h1>Bubble Boba</h1>
-                <h3>Welcome to our shop!</h3>
-                <div class="hero"> <img src="/images/boba-tea1.jpg" alt=" a set of boba tea"></div>
             
+            <h3>Welcome to our shop!</h3>
+            <div class="hero"> <img src="/images/boba-tea1.jpg" alt=" a set of boba tea"></div>
+
         </div>
     </section>
 
@@ -79,11 +80,35 @@
 
         <h2>Gallery!</h2>
         <p>Here is a gallery of the wonderful boba tea combos you might like!</p>
-        <img id="boba1" class="img-responsive" src="/images/23.TaiwanOolongMilkTea-1.jpg" alt="a serving of Oolong milk tea">
-        <img id="boba2" class="img-responsive" src="/images/bubble-tea-fruits.webp" alt="a serving of boba tea with assorted fruits">
-        <img id="boba3" class="img-responsive"  src="/images/types-of-bubble-tea-766451-hero-01-a6dca4dd096a4d8abdde1a754766f851.webp" alt=" 4 assorted cups of boba tea">
-        <img id="boba4" class="img-responsive" src="/images/green-bubble-tea-fruit-e1562873692463.png" alt="green tea boba">
-        <img id="boba5" class="img-responsive" src="/images/tiger_milk_tea.jpg" alt="two glasses of tiger boba milk tea">
+        <ul class="grid">
+
+            <li>
+                <img id="boba1" class="img-responsive" src="/images/23.TaiwanOolongMilkTea-1.jpg"
+                    alt="a serving of Oolong milk tea">
+            </li>
+
+            <li>
+                <img id="boba2" class="img-responsive" src="/images/bubble-tea-fruits.webp"
+                    alt="a serving of boba tea with assorted fruits">
+            </li>
+
+            <li>
+                <img id="boba3" class="img-responsive"
+                    src="/images/types-of-bubble-tea-766451-hero-01-a6dca4dd096a4d8abdde1a754766f851.webp"
+                    alt=" 4 assorted cups of boba tea">
+            </li>
+
+            <li>
+                <img id="boba4" class="img-responsive" src="/images/green-bubble-tea-fruit-e1562873692463.png"
+                    alt="green tea boba">
+            </li>
+
+            <li>
+                <img id="boba5" class="img-responsive" src="/images/tiger_milk_tea.jpg"
+                    alt="two glasses of tiger boba milk tea">
+            </li>
+
+        </ul>
         <!--
         <ul class="grid">
             <li class="large" id="boba1"
@@ -95,16 +120,20 @@
         -->
     </section>
 
-    <section id="menu"> 
+    <section id="menu">
         <h2>Menu</h2>
         <p>Here is our current selections for boba beverages!</p>
     </section>
 
 
 
-    
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
 
+    <script src="js/script.js"></script>
 
+   
     <footer>
 
         <section id="contact">
@@ -124,6 +153,5 @@
     </footer>
 </body>
 
-<script src="js/script.js"></script>
 
 </html>
