Changed img file path links to ones without a forward slash.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="hero">
             <h3>Welcome to our shop!</h3>
 
-            <div class="hero-boba"> <img src="/images/boba-tea1.jpg" alt=" a set of boba tea"></div>
+            <div class="hero-boba"> <img src="images/boba-tea1.jpg" alt=" a set of boba tea"></div>
 
 
         </div>
@@ -44,7 +44,7 @@
     <section id="about">
         <div class="aboutboba">
             <h3>So what is Boba Tea?</h3>
-            <img class="bobaimg" src="/images/bubble-tea-recipe-tapioca.webp"
+            <img class="bobaimg" src="images/bubble-tea-recipe-tapioca.webp"
                 alt="Two glasses of brown sugar bubble tea." title="two glasses of brown sugar bubble tea">
             <p>Boba tea is a refreshing beverage that contains tapioca pearls mixed in with a tea of your
                 choice!</p>
@@ -93,28 +93,28 @@
         <ul class="grid">
 
             <li>
-                <img id="boba1" class="img-responsive" src="/images/23.TaiwanOolongMilkTea-1.jpg"
+                <img id="boba1" class="img-responsive" src="images/23.TaiwanOolongMilkTea-1.jpg"
                     alt="a serving of Oolong milk tea">
             </li>
 
             <li>
-                <img id="boba2" class="img-responsive" src="/images/bubble-tea-fruits.webp"
+                <img id="boba2" class="img-responsive" src="images/bubble-tea-fruits.webp"
                     alt="a serving of boba tea with assorted fruits">
             </li>
 
             <li>
                 <img id="boba3" class="img-responsive"
-                    src="/images/types-of-bubble-tea-766451-hero-01-a6dca4dd096a4d8abdde1a754766f851.webp"
+                    src="images/types-of-bubble-tea-766451-hero-01-a6dca4dd096a4d8abdde1a754766f851.webp"
                     alt=" 4 assorted cups of boba tea">
             </li>
 
             <li>
-                <img id="boba4" class="img-responsive" src="/images/green-bubble-tea-fruit-e1562873692463.png"
+                <img id="boba4" class="img-responsive" src="images/green-bubble-tea-fruit-e1562873692463.png"
                     alt="green tea boba">
             </li>
 
             <li>
-                <img id="boba5" class="img-responsive" src="/images/tiger_milk_tea.jpg"
+                <img id="boba5" class="img-responsive" src="images/tiger_milk_tea.jpg"
                     alt="two glasses of tiger boba milk tea">
             </li>
             <!-- -->
