--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="author" content="The Bubble Boba!">
+    <meta name="author" content="Andy Huynh">
     <meta name="description" content="This is a site for a boba tea shop!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Boba</title>
@@ -15,10 +15,10 @@
 
 </head>
 
-<body id="top">
+<body>
     <header>
-        <h2><a href="http://www.pluralsight.com" target="_blank">Bubble Boba</a></h2>
-        <nav>
+        <h2>Bubble Boba</h2>
+        <div id="navbar">
             <ul>
                 <li><a href="#top">Top</a></li>
                 <li><a href="#about">About</a></li>
@@ -26,16 +26,14 @@
                 <li><a href="#menu">Menu</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        </nav>
+        </div>
     </header>
 
 
-    <section id="hero">
-        <div></div>
+    <section id="main">
         <div class="hero">
-            <h3>Welcome to our shop!</h3>
-
-            <div class="hero-boba"> <img src="images/boba-tea1.jpg" alt=" a set of boba tea"></div>
+            <h1>Welcome to our shop!</h1>
+            <h3>Hope you'll enjoy the experience!</h3>
 
 
         </div>
@@ -75,7 +73,7 @@
                     <h2>About Us!</h2>
                     <p>Our passion is to bring happiness to people with the power of bubble tea!</p>
                     <p>We have recently opened in the city of Louisville!</p>
-
+                    <p>Be sure to visit the new store when we open!</p>
                 </div>
             </div>
         </div>
