updated the source file links with the http, added the closing / on the img tags, and added a test html page for testing purposes. still need to find out why on other computers that the site loads super slowly, doubt that the images are causing the loading. I assume that the jquery files are causing the issue.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Boba</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://kit.fontawesome.com/15df8596d6.js" crossorigin="anonymous"></script>
 
 </head>
@@ -43,7 +43,7 @@
         <div class="aboutboba">
             <h3>So what is Boba Tea?</h3>
             <img class="bobaimg" src="images/bubble-tea-recipe-tapioca.webp"
-                alt="Two glasses of brown sugar bubble tea." title="two glasses of brown sugar bubble tea">
+                alt="Two glasses of brown sugar bubble tea." title="two glasses of brown sugar bubble tea"/>
             <p>Boba tea is a refreshing beverage that contains tapioca pearls mixed in with a tea of your
                 choice!</p>
             <p>Boba tea or bubble tea does come in with many combinations of flavors!</p>
@@ -92,28 +92,28 @@
 
             <li>
                 <img id="boba1" class="img-responsive" src="images/23.TaiwanOolongMilkTea-1.jpg"
-                    alt="a serving of Oolong milk tea">
+                    alt="a serving of Oolong milk tea"/>
             </li>
 
             <li>
                 <img id="boba2" class="img-responsive" src="images/bubble-tea-fruits.webp"
-                    alt="a serving of boba tea with assorted fruits">
+                    alt="a serving of boba tea with assorted fruits"/>
             </li>
 
             <li>
                 <img id="boba3" class="img-responsive"
                     src="images/types-of-bubble-tea-766451-hero-01-a6dca4dd096a4d8abdde1a754766f851.webp"
-                    alt=" 4 assorted cups of boba tea">
+                    alt=" 4 assorted cups of boba tea"/>
             </li>
 
             <li>
                 <img id="boba4" class="img-responsive" src="images/green-bubble-tea-fruit-e1562873692463.png"
-                    alt="green tea boba">
+                    alt="green tea boba"/>
             </li>
 
             <li>
                 <img id="boba5" class="img-responsive" src="images/tiger_milk_tea.jpg"
-                    alt="two glasses of tiger boba milk tea">
+                    alt="two glasses of tiger boba milk tea"/>
             </li>
             <!-- -->
         </ul>
@@ -135,8 +135,8 @@
 
 
 
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
 
     <script src="js/script.js"></script>
