commented out Slick and implemented several lines of JS to do a similar carousel feature, the only thing that needs to be fixed is the image sizes themselves, going to need to crop/resize them to a consistent width. I do want to focus on making a hamburger bar for the nav on mobile.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Bubble Boba</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-    
+
 </head>
 
 <body>
@@ -50,7 +50,7 @@
     </section>
 
 
-    
+
 
     <section id="about-us">
         <div class="container">
@@ -76,28 +76,21 @@
         <p>Here is a gallery of the wonderful boba tea combos you might like!</p>
         <div class="gallery">
 
-            <div>
-                <img id="boba1" class="img-responsive" src="images/23.TaiwanOolongMilkTea-1.jpg"
-                    alt="a serving of Oolong milk tea" />
-            </div>
+            <img id="boba1" class="img-responsive" src="images/23.TaiwanOolongMilkTea-1.jpg"
+                alt="a serving of Oolong milk tea" />
 
-            <div>
-                <img id="boba2" class="img-responsive" src="images/bubble-tea-fruits.webp"
-                    alt="a serving of boba tea with assorted fruits" />
-            </div>
+            <img id="boba2" class="img-responsive" src="images/bubble-tea-fruits.webp"
+                alt="a serving of boba tea with assorted fruits" />
 
-            <div>
-                <img id="boba3" class="img-responsive"
-                    src="images/types-of-bubble-tea-766451-hero-01-a6dca4dd096a4d8abdde1a754766f851.webp"
-                    alt=" 4 assorted cups of boba tea" />
-            </div>
+            <img id="boba3" class="img-responsive"
+                src="images/types-of-bubble-tea-766451-hero-01-a6dca4dd096a4d8abdde1a754766f851.webp"
+                alt=" 4 assorted cups of boba tea" />
 
-            <div>
-                <img class="bobaimg" src="images/bubble-tea-recipe-tapioca.webp"
-                    alt="Two glasses of brown sugar bubble tea." title="two glasses of brown sugar bubble tea" />
-            </div>
+            <img id="boba4" class="img-responsive" src="images/bubble-tea-recipe-tapioca.webp"
+                alt="Two glasses of brown sugar bubble tea." title="two glasses of brown sugar bubble tea" />
         </div>
-
+        <button onclick="DecrementGallery()">Previous</button>
+        <button onclick="IncrementGallery()">Next</button>
     </section>
 
     <section id="menu">
@@ -107,8 +100,6 @@
 
         </div>
     </section>
-
-
 
 
 
@@ -132,12 +123,13 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/15df8596d6.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
         integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 
     <script src="js/script.js"></script>
 
