created a hero img with a text box with a blur background. the problem is that on mobile, the text box doesnt scale properly. I also replaced a couple of images since the original ones were too big. I also included several items on the menu.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <h2>Bubble Boba</h2>
+        <h2 class="nav-title">Bubble Boba</h2>
         <div id="navbar">
             <ul>
                 <li><a href="#top">Top</a></li>
@@ -28,19 +28,20 @@
     </header>
 
 
-    <section id="main">
-        <div class="hero">
-            <h1>Welcome to our shop!</h1>
-            <h3>Hope you'll enjoy the experience!</h3>
-
-
-        </div>
+    <section class="hero">
+        <div class="hero-image"></div>
+        <div class="bg-text">
+            <h2>Blurred Background</h2>
+            <h1 style="font-size:50px">Welcome to the Bubble Boba!</h1>
+            <p>Enjoy your stay!</p>
+          </div>
+        
     </section>
 
     <section id="about">
         <div class="about-boba">
             <h3>So what is Boba Tea?</h3>
-            <img class="bobaimg" src="images/bubble-tea-recipe-tapioca.webp"
+            <img class="bobaimg" src="images/boba-tea1.jpg"
                 alt="Two glasses of brown sugar bubble tea." title="two glasses of brown sugar bubble tea" />
             <p>Boba tea is a refreshing beverage that contains tapioca pearls mixed in with a tea of your
                 choice!</p>
@@ -76,18 +77,18 @@
         <p>Here is a gallery of the wonderful boba tea combos you might like!</p>
         <div class="gallery">
 
-            <img id="boba1" class="img-responsive" src="images/23.TaiwanOolongMilkTea-1.jpg"
-                alt="a serving of Oolong milk tea" />
+            <img id="boba1" class="img-responsive" src="images/shutterstock_1276546729.0.jpg"
+                alt="two cups of brown sugar boba tea" title="two cups of brown sugar boba tea" />
 
             <img id="boba2" class="img-responsive" src="images/bubble-tea-fruits.webp"
-                alt="a serving of boba tea with assorted fruits" />
+                alt="a serving of boba tea with assorted fruits" title="a serving of boba tea with assorted fruits" />
 
             <img id="boba3" class="img-responsive"
                 src="images/types-of-bubble-tea-766451-hero-01-a6dca4dd096a4d8abdde1a754766f851.webp"
-                alt=" 4 assorted cups of boba tea" />
+                alt=" 4 assorted cups of boba tea" title="4 assorted cups of boba tea" />
 
-            <img id="boba4" class="img-responsive" src="images/bubble-tea-recipe-tapioca.webp"
-                alt="Two glasses of brown sugar bubble tea." title="two glasses of brown sugar bubble tea" />
+            <img id="boba4" class="img-responsive" src="images/illustration_1a5ad14874a750bbff917c1b027bb2e5.jpeg"
+                alt="multiple selections of boba tea" title="multiple selections of boba tea" />
         </div>
         <button onclick="DecrementGallery()">Previous</button>
         <button onclick="IncrementGallery()">Next</button>
@@ -96,8 +97,19 @@
     <section id="menu">
         <div class="menu-main">
             <h2>Menu</h2>
-            <p>Here is our current selections for boba beverages!</p>
-
+            <h2>Here is our current selections for boba beverages!</h2>
+            <h3>Brown Sugar Boba</h3>
+            <p>The most requested and most refreshing drink!</p>
+            <h3>Green Tea Boba</h3>
+            <p>This delicious drink will keep you chill!</p>
+            <h3>Mango Milk Boba</h3>
+            <p>This is for anyone who loves mango in their day!</p>
+            <h3>Fruit Melody Boba</h3>
+            <p>Can't decide? We got you covered with a bunch of fruits for you!</p>
+            <h3>Black Tea Milk Boba</h3>
+            <p>For anyone who loves their tea to have a stronger taste!</p>
+            <h3>Coffee Mocha Boba</h3>
+            <p>For anyone with a coffee fix will love this!</p>
         </div>
     </section>
 
