--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" href="css/test.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -16,6 +17,20 @@
 </head>
 
 <body>
+    <section class="hero">
+        <div class="hero-image">
+          <h2>Hello</h2>
+        </div>
+        
+        <div class="bg-image"></div>
+
+<div class="bg-text">
+  <h2>Blurred Background</h2>
+  <h1 style="font-size:50px">Welcome to the Bubble Boba!</h1>
+  <p>Enjoy your stay!</p>
+</div>
+      </section>
+
     <div class="your-class">
         <div>
             <img id="boba1" class="img-responsive" src="images/23.TaiwanOolongMilkTea-1.jpg"
