Fixed the hamburger bar by putting the /a tag underneath the icon element of the html. So far, the site should have several requirements met. Still need to fix some of the images, and for some reason the footer broke in mobile.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                 <a href="#gallery">Gallery</a>
                 <a href="#menu">Menu</a>
                 <a href="#contact">Contact</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()"></a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
+            </a>
         </div>
     </header>
 
