Updated the menu to have two columns that turns into stacked rows when it goes from desktop to mobile. For some reason, the site will not add any more images to the site. What I intend to do is to add a couple more images to the about sections.

--- a/test.html
+++ b/test.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="css/test.css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
-        integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" -->
+        <!-- integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
@@ -72,6 +72,33 @@
                 alt="Two glasses of brown sugar bubble tea." title="two glasses of brown sugar bubble tea"/>
         </div>
     </div>
+
+    <section id="menu">
+        <div class="menu-main">
+            <h2>Menu</h2>
+            <h2>Here is our current selections for boba beverages!</h2>
+            <div class="menu-items">
+                <h3>Brown Sugar Boba</h3>
+                <p>The most requested and most refreshing drink!</p>
+                <h3>Green Tea Boba</h3>
+                <p>This delicious drink will keep you chill!</p>
+                <h3>Mango Milk Boba</h3>
+                <p>This is for anyone who loves mango in their day!</p>
+                <h3>Fruit Melody Boba</h3>
+                <p>Can't decide? We got you covered with a bunch of fruits for you!</p>
+                <h3>Black Tea Milk Boba</h3>
+                <p>For anyone who loves their tea to have a stronger taste!</p>
+                <h3>Coffee Mocha Boba</h3>
+                <p>For anyone with a coffee fix will love this!</p>
+                <h3>Galaxy Star Boba</h3>
+                <p>To travel the unknown! Taste the stars!!!</p>
+                <h3>Autumn Remix</h3>
+                <p>More than just Pumpkin Spice! The coziest drink ever made!</p>
+            </div>
+        </div>
+    </section>
+
+
 
     <script src="js/test.js"></script>
 
