I have tried to add some media queries of over 1000px, but it basically took almost all of the styling away from the previous version. I have disabled those queries until I find a way to improve on that.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <section id="about">
         <div class="about-boba">
             <h3>So what is Boba Tea?</h3>
+            <img class="aboutboba-img" src="images/human-hand-holding-a-bottle-of-iced-cold-bubble-tea-royalty-free-image-1615834385.jpg" />
             <p>Boba tea is a refreshing beverage that contains tapioca pearls mixed in with a tea of your
                 choice!</p>
             <p>Boba tea or bubble tea does come in with many combinations of flavors!</p>
@@ -57,7 +58,7 @@
             <div> 
                 <div class="aboutus-img">
 
-                    <img src="/images/human-hand-holding-a-bottle-of-iced-cold-bubble-tea-royalty-free-image-1615834385.jpg" alt="" />
+                    
                 
                 </div>
 
